<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:src="@drawable/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:background="?android:attr/windowBackground"
            />

        <TextView
            android:id="@+id/header_title"
            android:text="@string/setting"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:background="?android:attr/windowBackground"
            android:visibility="invisible"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:background="#34000000"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_box"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="15dp">
                <TextView
                    android:text="@string/category_language"
                    android:textStyle="bold"
                    android:paddingBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <RadioGroup
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/English"
                            android:text="@string/language_english"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/Korean"
                            android:text="@string/language_korean"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:background="#34000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp">
                <TextView
                    android:text="@string/category_services"
                    android:textStyle="bold"
                    android:paddingBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/service_notification"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notificationOnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                    <TextView
                        android:text="@string/service_notification_guide"
                        android:textSize="12dp"
                        android:textColor="#A1A1A1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/service_lock_screen_mode"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/lockScreenModeOnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                    <TextView
                        android:text="@string/service_lock_screen_mode_guide"
                        android:textSize="12dp"
                        android:textColor="#A1A1A1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:background="#34000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/changeListNameBtn"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_box"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="15dp"
                android:visibility="gone">
                <TextView
                    android:text="your to do list name : "
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/todoListName"
                    android:text="To Do List"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text=">"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:background="#34000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                >
                <TextView
                    android:text="@string/category_item_view"
                    android:textStyle="bold"
                    android:paddingBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_created"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_updated"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showUpdated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_progress"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_scheduled"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showScheduled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/item_view_show_check_icon"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/showCheckIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:background="#34000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp">
                <TextView
                    android:text="@string/category_way_to_arrange_items"
                    android:textStyle="bold"
                    android:paddingBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >
                    <TextView
                        android:text="@string/way_to_arrange_items_sort_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/newToOld"
                            android:text="@string/way_to_arrange_items_sort_by_new_to_old"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/oldToNew"
                            android:text="@string/way_to_arrange_items_sort_by_old_to_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >
                    <TextView
                        android:text="@string/way_to_arrange_items_filter_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/showUncompleted"
                            android:text="@string/way_to_arrange_items_filter_by_uncompleted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/showCompleted"
                            android:text="@string/way_to_arrange_items_filter_by_completed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/showCompletedUnCompletedBoth"
                            android:text="@string/way_to_arrange_items_filter_by_both"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>






        </LinearLayout>
    </ScrollView>




</LinearLayout>