<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="30dp"
    android:gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/ripple_box">


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/content"
            android:text="@string/content"
            android:textSize="14dp"
            android:textColor="#A1A1A1"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/createdContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12dp"
                android:text="@string/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/created"
                android:textSize="12dp"
                android:text="2024.01.15.11:21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/updatedContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12dp"
                android:textColor="#2155F3"
                android:text="@string/updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/updated"
                android:textSize="12dp"
                android:textColor="#2155F3"
                android:text="2024.01.15.13:11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:textSize="12dp"
            android:text="@string/items_status_not_yet_completed"
            android:textColor="#4CAF50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/scheduledContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/clock"
                android:src="@drawable/img_clock"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:id="@+id/scheduledPrefix"
                android:textSize="12dp"
                android:textColor="#F44336"
                android:text="@string/scheduled"
                android:layout_marginRight="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/scheduled"
                android:textSize="12dp"
                android:textColor="#F44336"
                android:text="2024.02.26 13:11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/unScheduledContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone">
            <ImageView
                android:src="@drawable/img_clock_disabled"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                />
            <TextView
                android:textSize="12dp"
                android:textColor="#B5B4B4"
                android:text="@string/unscheduled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/check"
        android:src="@drawable/img_check"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="15dp"
        />


</LinearLayout>