<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:background="@drawable/bottom_sheet_dialog_handle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/text"
        android:text="@string/content"
        android:textSize="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noButton"
            android:text="@string/btnText_no"
            android:textStyle="bold"
            android:background="@drawable/shape_button_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesButton"
            android:text="@string/btnText_yes"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/shape_button_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>